remove old files

--- a/index-v2.html
+++ b/index-v2.html
@@ -8,5 +8,22 @@
    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+   <div>
+   <h1>Emily Sakata</h1>
+   <nav>
+         <ul>
+            <li><a href="#">About</a></li>
+            <li><a href="#overview">Work</a></li>
+         </ul>
+   </nav>
+
+      <div><img class="mono" src="img/edgar-chaparro-532115-unsplash.jpg" alt=""></div>
+      <div><img class="mono" src="img/louie-martinez-482218-unsplash.jpg" alt=""></div>
+<div style = "height:400px;">
+   some text to come down.
+
+</div>
+
+</div>
 </body>
 </html>
